@@ -91,10 +91,7 @@ proc accounting_setup {} {
    ts_log_fine "setting configuration (flush time)"
    set FLUSH_TIME "05"
    set new_conf(reporting_params) "accounting=true reporting=true flush_time=00:00:$FLUSH_TIME joblog=true sharelog=00:00:00"
-   if { [set_config new_conf] != 0 } {
-      ts_log_severe "can not set reporting_params"
-      return -1
-   }
+   set_config new_conf
 
    # start dbwriter
    ts_log_fine "starting dbwriter"
