@@ -141,10 +141,7 @@ proc arco_dbwriter_job_log_cleanup  {} {
    set sqlutil_id ""
    set sqlutil_sp_id ""
    
-   if {[reset_config arco_dbwriter_job_log_org_config] != 0} {
-      ts_log_severe "Can not reset configuration"
-      return -1
-   }
+   reset_config arco_dbwriter_job_log_org_config
 
    if { [get_dbwriter_status 0] == 0 } {
       if { [shutdown_dbwriter] != 0 } {
@@ -177,10 +174,7 @@ proc arco_dbwriter_job_log_execute {} {
    }
    
    set config(reporting_params) "accounting=true reporting=true flush_time=00:00:10 joblog=$joblog sharelog=00:10:00"
-   if {[set_config config] != 0} {
-      ts_log_severe "Can not set reporting_params"
-      return -1
-   }
+   set_config config
    
    if { [get_dbwriter_status 0] == 0 } {
       if { [shutdown_dbwriter] != 0 } {
